--- a/examples/finagle/src/main/resources/META-INF/resources/ui/index.html
+++ b/examples/finagle/src/main/resources/META-INF/resources/ui/index.html
@@ -1,4 +1,4 @@
-<!doctype html>OA
+<!doctype html>
 <html lang="en">
   <head>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
@@ -18,16 +18,12 @@
     <script>
 
       app = angular.module('treodeAdmin',[]);
-
-      app.service('shareTableId', [ function() {
-      this.tableId = {id:""};
-      }]);
-
-      app.controller('GetTables',['$scope','$http','shareTableId',function ($scope, $http, shareTableId ) {
-      $scope.tableId = shareTableId.tableid;
+      app.config(function($httpProvider){
+      delete $httpProvider.defaults.headers.common['X-Requested-With'];
+      });
+      app.controller('GetTables',['$scope','$http',function ($scope, $http ) {
       $scope.showtbl = function ( table_id ) {
-      console.log(tableId);
-      $scope.tableId.id = tableId;
+      $scope.$broadcast("showtableid",table_id);
       };
 
       $http.get('http://localhost:9990/admin/treode/tables')
@@ -42,9 +38,16 @@
       })}]);
 
 
-      app.controller('GetRows',['$scope','$http', function ($scope, $http, shareTableId ) {
-      $scope.tableId = "" ; //shareTableId.tableId;
-      console.log("GETTHETABLE " + $scope.tableId);
+      app.controller('GetRows',['$scope','$http', function ($scope, $http ) {
+      $scope.table_id = "";
+      $scope.$on("showtableid", function (event, message ) {
+      $scope.table_id = message;
+      $http.get('http://localhost:7070/table/'+$scope.table_id)
+      .success(function(data) {
+      $scope.table_data = data;
+      });
+
+      });
       }]);
 
     </script>
@@ -73,14 +76,31 @@
         </div>
         <div class="col-md-11 col-md-offset-1 main">
           <h1 class="page-header">Dashboard</h1>
-	  <div class="col-sm-3 placeholder" ng-controller="GetTables">
-	    Tables
-	    <table>
-	      <tr ng-repeat="tbl in tables">
-		<td><a href="" ng-click="showtbl(tbl.id)">{{ tbl.id }}</a></td>
-	      </tr>
-	    </table>
+	  <div class="col-md-11" ng-controller="GetTables">
+	    <div class="col-sm-2">
+	      Tables
+	      <table>
+		<tr ng-repeat="tbl in tables">
+		  <td><a href="" ng-click="showtbl(tbl.id)">{{ tbl.id }}</a></td>
+		</tr>
+	      </table>
+	    </div>
+	    <div class="col-md-9" ng-controller="GetRows">
+	      Table id: <span ng-bind="table_id"></span>
+	      <table class="table table-striped table-condensed">
+		<thead>
+		  <tr>
+		    <th class="col-md-2">key</th>
+		    <th class="col-md-9">value</th>
+		  </tr>
+		</thead>
+		<tr ng-repeat="row in table_data">
+		  <td>{{ row.key }}</td><td>{{ row.value }}</td>
+		</tr>
+	      </table>
+	    </div>
 	  </div>
+	  <!--
 	  <div class="col-sm-3" ng-controller="GetDrives">
 	    Drives
 	    <table>
@@ -89,16 +109,8 @@
 	      </tr>
 	    </table>
 	  </div>
+	  -->
         </div>
-      </div>
-      <div class="col-md-11 col-md-offset-1" ng-controller="GetRows">
-	<h3 class="page-header">Table Editor</h3>
-	Table id: {{ tableId.id }}
-	<table>
-	  <tr ng-repeat="row in rows">
-	    <td>{{ row.key }}</td><td>{{ row.value }}</td>
-	  </tr>
-	</table>
       </div>
     </div>
     <!-- script references -->
